package com.example.demo.bean;

public class Classroom {

    private String name;

    private String status;


}
